--- a/styles/global.scss
+++ b/styles/global.scss
@@ -549,6 +549,10 @@ div.ant-collapse-item.ant-collapse-item-active {
   border: 0 !important;
 }
 
+.ant-collapse-header-text {
+  font-family: var(--open-sans-semi-bold) !important;
+}
+
 .ant-collapse {
   border-radius: 0;
 }
