fix label sulit

--- a/styles/abstract/_colors.scss
+++ b/styles/abstract/_colors.scss
@@ -39,6 +39,7 @@ $secondary-sky-blue-10: '#00C2E0';
 $secondary-brick-red: '#B4231E';
 $secondary-green: '#1AA674';
 $secondary-yellow: '#FFD749';
+$secondary-orange: #f9803f;
 $shades-grey-5: '#F5F6F6';
 $shades-grey-10: '#EBECEE';
 $shades-grey-25: '#CDD0D4';
