--- a/styles/components/organisms/cardetailcardMultiCredit.module.scss
+++ b/styles/components/organisms/cardetailcardMultiCredit.module.scss
@@ -72,6 +72,10 @@ $card-height: 445px;
   left: 124px;
 }
 
+.labelSulit {
+  background-color: #{$secondary-orange};
+}
+
 .hargaOtrWrapper {
   display: flex;
   flex-direction: row;
