--- a/styles/components/organisms/cardetailcardMultiCredit.module.scss
+++ b/styles/components/organisms/cardetailcardMultiCredit.module.scss
@@ -73,7 +73,7 @@ $card-height: 445px;
 }
 
 .labelSulit {
-  background-color: #{$secondary-orange};
+  background-color: #{$secondary-orange} !important;
 }
 
 .hargaOtrWrapper {
