--- a/styles/components/organisms/searchComponent.module.scss
+++ b/styles/components/organisms/searchComponent.module.scss
@@ -258,6 +258,15 @@
   font-style: normal;
   font-weight: 400;
   font-family: var(--open-sans);
+}
+
+.ctaCarName {
+  color: black;
+  // margin-left: 0;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  font-family: var(--open-sans);
   color: #246ed4;
 }
 
