--- a/styles/components/organisms/summary.module.scss
+++ b/styles/components/organisms/summary.module.scss
@@ -12,7 +12,7 @@
   align-items: flex-start;
   // padding: 16px;
   gap: 16px;
-  height: 136px;
+  height: auto;
   background: #ffffff;
   border-radius: 8px;
   margin: 24px 0px;
@@ -34,6 +34,12 @@
     }
   }
 }
+
+.cardPromoDetail {
+  @extend .cardInfoDetail;
+  padding: 16px 0px;
+}
+
 .row {
   display: flex;
   align-items: center;
