educational bottom component

--- a/styles/components/organisms/educationalPopup.module.scss
+++ b/styles/components/organisms/educationalPopup.module.scss
@@ -1,11 +1,23 @@
 @import '../../abstract/colors';
 @import '../../abstract/mixins';
 
-.bottomSheetContainer {
-  [data-rsbs-header] {
-    padding-top: 27px;
+.popupHeader {
+  height: 550px;
+  padding: 0px 24px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #{$shades-grey-25};
+    border-radius: 20px;
+    right: -20px;
   }
 }
+
 .popupSubHeader {
   flex-direction: row;
   align-items: center;
@@ -19,19 +31,25 @@
   display: flex;
   justify-content: space-between;
 }
+.textPromoBanner {
+  @extend .openSans;
+  margin-top: -34px;
+  margin-left: 16px;
+  color: #ffffff !important;
+}
 .kanyonMedium {
   font-family: var(--kanyon);
   font-weight: 400;
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 16px;
+  line-height: 24px;
   color: #13131b;
 }
 
 .kanyonSemiBold {
   font-family: var(--kanyon-medium);
   font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 20px;
   color: #000000;
 }
 .openSans {
@@ -45,13 +63,35 @@
     font-weight: 600;
   }
 }
-
-.container {
+.bannerPromo {
+  min-height: 165px;
+}
+.imagePromoSpacing {
+  margin-top: 16px;
+  margin-bottom: 24px;
+  width: 100%;
+}
+.spacingChevronIcon {
+  margin-left: 9px;
+}
+.pdpLowerSection {
+  background: #f5f6f6;
+}
+.promoBannerSmall {
+  border-radius: 8px;
+}
+.promoBanner {
+  position: relative !important;
+  object-fit: cover;
+  width: 100%;
+  border-radius: 8px;
+}
+.containerPromoPopup {
+  height: 550px;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
   -webkit-overflow-scrolling: touch;
-
+  overflow-y: auto;
   &::-webkit-scrollbar {
     width: 4px;
   }
@@ -62,60 +102,45 @@
     right: -20px;
   }
 }
-.containerDP {
-  @extend .container;
-  overflow: auto !important;
+
+.container {
+  height: 526px;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+
+  padding-bottom: 20px;
+  padding-top: 8px;
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #{$shades-grey-25};
+    border-radius: 20px;
+    right: -20px;
+  }
 }
+
 .contentPromo {
   display: flex;
   flex-direction: column;
 }
 
-.bottomSheetSmall [data-rsbs-overlay] {
-  @include centeredWithMaxWidth;
-  height: auto;
-}
-
-.bottomSheetSmall [data-rsbs-backdrop] {
-  @include centeredWithMaxWidth;
-}
 .bottomSheet [data-rsbs-overlay] {
   @include centeredWithMaxWidth;
-  height: auto;
-  top: 137px;
 }
 
 .bottomSheet [data-rsbs-backdrop] {
   @include centeredWithMaxWidth;
-  height: 197px;
 }
-
-.bottomSheetStart [data-rsbs-overlay] {
-  @include centeredWithMaxWidth;
-  height: auto;
-  top: 137px;
-}
-
-.bottomSheetStart [data-rsbs-backdrop] {
-  @include centeredWithMaxWidth;
-}
-.bottomSheetDismiss [data-rsbs-overlay] {
-  @include centeredWithMaxWidth;
-  height: auto;
-  top: 137px;
-}
-
-.bottomSheetDismiss [data-rsbs-backdrop] {
-  @include centeredWithMaxWidth;
-}
-
 .informationWrapper {
   border-radius: 8px;
   background: var(--shades-sky-blue-sky-blue-10, #eef6fb);
   padding: 16px;
   display: flex;
   gap: 16px;
-  align-items: center;
 }
 .informationTitleText {
   font-family: var(--open-sans-bold);
@@ -141,7 +166,7 @@
   margin-bottom: 32px;
 }
 .wrapper {
-  padding: 0px 16px;
+  padding: 0px 24px;
 }
 .content {
   margin-top: 25px;
@@ -150,17 +175,5 @@
   padding: 10px 0px;
 }
 .spacingText {
-  margin-bottom: 32px;
-}
-.wrapperButtonCta {
-  margin: 32px 24px 24px 24px;
-}
-.buttonCta {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.iconWrapper {
-  width: 40px;
-  height: 40px;
+  margin-bottom: 25px;
 }
