--- a/styles/components/organisms/educationalPopup.module.scss
+++ b/styles/components/organisms/educationalPopup.module.scss
@@ -177,3 +177,9 @@
 .spacingText {
   margin-bottom: 25px;
 }
+.wrapperButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
+}
