--- a/styles/components/organisms/educationalPopup.module.scss
+++ b/styles/components/organisms/educationalPopup.module.scss
@@ -128,12 +128,21 @@
   flex-direction: column;
 }
 
+.bottomSheetSmall [data-rsbs-overlay] {
+  @include centeredWithMaxWidth;
+  height: 394px;
+}
+
+.bottomSheetSmall [data-rsbs-backdrop] {
+  @include centeredWithMaxWidth;
+}
 .bottomSheet [data-rsbs-overlay] {
   @include centeredWithMaxWidth;
 }
 
 .bottomSheet [data-rsbs-backdrop] {
   @include centeredWithMaxWidth;
+  height: 197px;
 }
 .informationWrapper {
   border-radius: 8px;
