--- a/styles/components/organisms/promoBottomSheet.module.scss
+++ b/styles/components/organisms/promoBottomSheet.module.scss
@@ -38,6 +38,12 @@
   background-color: #{$shades-grey-5};
   margin: 30px 0 201px;
 }
+.lineDividerWhenCarDontHavePromoUsedCar {
+  width: 100%;
+  // height: 4px;
+  background-color: #{$shades-grey-5};
+  margin: 30px 0 184px;
+}
 
 .toast {
   position: absolute;
