fix-glitch-when-open-tray

--- a/styles/components/organisms/educationalPopup.module.scss
+++ b/styles/components/organisms/educationalPopup.module.scss
@@ -90,6 +90,14 @@
   height: 197px;
 }
 
+.bottomSheetStart [data-rsbs-overlay] {
+  @include centeredWithMaxWidth;
+  height: 85%;
+}
+
+.bottomSheetStart [data-rsbs-backdrop] {
+  @include centeredWithMaxWidth;
+}
 .bottomSheetDismiss [data-rsbs-overlay] {
   @include centeredWithMaxWidth;
   height: auto;
