update-height-on-open-tray

--- a/styles/components/organisms/educationalPopup.module.scss
+++ b/styles/components/organisms/educationalPopup.module.scss
@@ -92,7 +92,8 @@
 
 .bottomSheetStart [data-rsbs-overlay] {
   @include centeredWithMaxWidth;
-  height: 85%;
+  height: auto;
+  top: 137px;
 }
 
 .bottomSheetStart [data-rsbs-backdrop] {
