--- a/styles/components/organisms/cardVariantOptions.module.scss
+++ b/styles/components/organisms/cardVariantOptions.module.scss
@@ -14,7 +14,7 @@
   box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.08);
   img {
     width: 60px;
-    height: 37.3px;
+    height: 45.37px;
   }
 }
 .title {
@@ -34,6 +34,7 @@
   display: flex;
   gap: 16px;
   width: 100%;
+  align-items: center;
 }
 .wrapperText {
   display: flex;
