--- a/styles/components/atoms/inputMultilineSelect.module.scss
+++ b/styles/components/atoms/inputMultilineSelect.module.scss
@@ -5,6 +5,10 @@
   width: 100%;
   position: relative;
 }
+.containerCalculationResult {
+  @extend .container;
+  height: 66px !important;
+}
 
 .inputArea {
   position: relative;
