--- a/styles/components/organisms/cardetailcard.module.scss
+++ b/styles/components/organisms/cardetailcard.module.scss
@@ -37,7 +37,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .contentWrapper {
@@ -48,10 +47,18 @@
   align-items: flex-start;
 }
 
-.labelCard {
+.labelCardPrimary {
   position: absolute;
   z-index: 3;
   left: 0;
+  top: 96px;
+  cursor: pointer;
+}
+
+.labelCardSecondary {
+  position: absolute;
+  z-index: 3;
+  left: 125px;
   top: 96px;
   cursor: pointer;
 }
@@ -199,7 +206,6 @@
   color: #{$primary-white};
   cursor: pointer;
 }
-
 
 .overlayAdditionalStyle {
   background-color: transparent;
