update-logic-show-badge-multi-result

--- a/styles/components/organisms/cardetailcardMultiCredit.module.scss
+++ b/styles/components/organisms/cardetailcardMultiCredit.module.scss
@@ -64,6 +64,9 @@ $card-height: 445px;
   top: 96px;
 }
 
+.loanRankLabelAdditionalHyundaiStyle {
+  left: 0px;
+}
 .loanRankLabelAdditionalStyle {
   left: 146px;
 }
