fix-car-recomendation-badge

--- a/styles/components/organisms/cardetailcard.module.scss
+++ b/styles/components/organisms/cardetailcard.module.scss
@@ -47,6 +47,13 @@
   align-items: flex-start;
 }
 
+.labelCard {
+  position: absolute;
+  z-index: 3;
+  left: 0;
+  top: 96px;
+  cursor: pointer;
+}
 .labelCardPrimary {
   position: absolute;
   z-index: 3;
