--- a/styles/components/atoms/inputMultilineSelect.module.scss
+++ b/styles/components/atoms/inputMultilineSelect.module.scss
@@ -165,6 +165,9 @@
   &.dropdownItemTextContainer {
     display: block;
   }
+  &.dropdownItemTextContainer:hover {
+    background: #f3f9fd;
+  }
 
   &.disabled {
     background: #{$shades-grey-5};
