--- a/styles/components/atoms/inputMultilineSelect.module.scss
+++ b/styles/components/atoms/inputMultilineSelect.module.scss
@@ -106,6 +106,7 @@
 
 .selectedTextWithElipsis {
   @extend .selectedText;
+  font-size: 11px !important;
   margin-right: 15px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -197,6 +198,7 @@
 .dropdownItemAdditionalTextElipsis {
   @extend .dropdownItemAdditionalText;
 
+  font-size: 11px !important;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
