--- a/styles/components/organisms/searchWidgetSection.module.scss
+++ b/styles/components/organisms/searchWidgetSection.module.scss
@@ -2,11 +2,10 @@
 @import '../../abstract/mixins';
 
 .container {
-  margin-bottom: -24px;
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 16px;
+  padding: 0 16px;
 }
 
 .upperSpacing {
