--- a/styles/components/molecules/calculationResultItem.module.scss
+++ b/styles/components/molecules/calculationResultItem.module.scss
@@ -105,6 +105,8 @@
   line-height: 18px;
   color: #{$primary-black};
   mix-blend-mode: normal;
+  text-align: start;
+  margin-left: 11%;
 }
 
 .oldPriceText {
