--- a/styles/components/organisms/calculationResult.module.scss
+++ b/styles/components/organisms/calculationResult.module.scss
@@ -62,6 +62,11 @@
   text-align: center;
 }
 
+.dataHeaderTextSmall {
+  @extend .dataHeaderText;
+  font-family: var(--open-sans-semi-bold) !important;
+  font-weight: 600 !important;
+}
 .tenorHeader {
   min-width: 106px;
 }
