--- a/styles/components/organisms/calculationResultSkeleton.module.scss
+++ b/styles/components/organisms/calculationResultSkeleton.module.scss
@@ -27,7 +27,7 @@
 }
 .wrapperInside {
   background: #ebecee;
-  width: 40%;
+  width: 199px;
   height: 12px;
   border-radius: 12px;
 }
@@ -48,11 +48,13 @@
 }
 .wrapperContentUnselect {
   @extend .wrapperContent;
-  border: 2px solid #e4e9f1 !important;
+  border: 1px solid #ebecee !important;
   background: transparent !important;
   margin-top: 15px;
   border-radius: 8px;
   height: 61px !important;
+  justify-content: unset !important;
+  padding: 0px 49px;
 }
 .wrapperSkeleton {
   display: flex;
@@ -83,7 +85,12 @@
   mix-blend-mode: normal;
   text-align: center;
 }
+.dataHeaderTextSmall {
+  @extend .dataHeaderText;
 
+  font-family: var(--open-sans-semi-bold) !important;
+  font-weight: 600 !important;
+}
 .tenorHeader {
   min-width: 106px;
 }
