brand dealer page, brand city dealer, hotfix meta title

--- a/styles/components/molecules/faq.module.scss
+++ b/styles/components/molecules/faq.module.scss
@@ -37,6 +37,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  cursor: pointer;
 
   h4 {
     font-family: var(--open-sans-semi-bold);
