--- a/styles/components/molecules/info.module.scss
+++ b/styles/components/molecules/info.module.scss
@@ -48,6 +48,28 @@
   font-weight: 500;
 }
 
+.alternativeWrapper {
+  padding: 16px 0px;
+}
+
+.alternativeTextHeading {
+  color: #{$primary-dark-blue};
+  font-family: var(--kanyon);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 8px;
+}
+
+.alternativeTextDesc {
+  color: #{$shades-grey-75};
+  font-family: var(--open-sans);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+
 .textDesc {
   @include descriptionStyle();
   @include expandedStyle();
