--- a/styles/components/molecules/searchWidget/selectWidgetUsedCar.module.scss
+++ b/styles/components/molecules/searchWidget/selectWidgetUsedCar.module.scss
@@ -36,6 +36,19 @@
   display: inline-block;
 }
 
+.alternativePlaceholder {
+  flex: 1;
+  border: none;
+  background: #{$primary-white};
+  text-shadow: 0px 4px 84px rgba(0, 0, 0, 0.1);
+  font-family: var(--open-sans);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #{$shades-grey-75};
+}
+
 .placeholder {
   font-family: var(--open-sans-semi-bold);
   font-size: 14px;
@@ -68,6 +81,13 @@
 
 .textArrowWrapper {
   display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding-top: 5px;
+  gap: 5px;
+}
+
+.inputSelecetWrapper {
   flex-direction: row;
   align-items: flex-start;
   gap: 5px;
