--- a/styles/components/organisms/dealerSearchWidget.module.scss
+++ b/styles/components/organisms/dealerSearchWidget.module.scss
@@ -4,7 +4,32 @@
 .container {
   position: relative;
   width: 100%;
-  padding: 0 16px;
+  height: 100%;
+}
+
+.title {
+  font-family: var(--open-sans);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: #{$shades-grey-75};
+}
+
+// .alternativeCardShadow {
+//   border-radius: 8px;
+//   background: #{$primary-white};
+//   box-shadow: 0px 8px 40px 1px rgba(0, 0, 0, 0.08);
+// }
+
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 8px 16px;
+  min-height: 269px;
+  height: 100%;
+  // overflow: hidden;
+  transition: max-height 1s ease;
 }
 
 .expandCard {
@@ -95,14 +120,11 @@
   }
 }
 
-.containertitleCard {
-  padding: 24px 0;
-}
-
-.titleCard {
-  color: var(--Shades-Grey-Grey-75, #878d98);
+.errorText {
+  margin-top: -10px;
   font-family: var(--open-sans);
-  font-size: 14px;
   font-weight: 400;
-  line-height: 20px; /* 142.857% */
+  font-size: 12px;
+  line-height: 18px;
+  color: #{$secondary-brick-red};
 }
