--- a/styles/pages/dealer.module.scss
+++ b/styles/pages/dealer.module.scss
@@ -23,14 +23,15 @@
 .searchContainer {
   position: relative;
   width: 100%;
-  padding: 0 16px;
+  // margin-top: 24px;
+  padding: 24px 16px;
 }
 
 .cardContainer {
-  padding: 16px 8px;
   display: flex;
-  flex-direction: column;
-  min-height: 303px;
-  height: 100%;
-  transition: max-height 1s ease;
+  height: 265px;
+  padding: 16px 8px;
+  align-items: flex-start;
+  gap: 8px;
+  flex-shrink: 0;
 }
