--- a/styles/components/organisms/carRecomendationsUsedCar.module.scss
+++ b/styles/components/organisms/carRecomendationsUsedCar.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 32px 0 0;
-  background-color: #{$primary-white};
+  background-color: #{$shades-grey-5};
 }
 
 .alternativeCarTitle {
