faq&recommendation bgColor

--- a/styles/pages/dealer.module.scss
+++ b/styles/pages/dealer.module.scss
@@ -16,6 +16,11 @@
   padding: 24px 16px;
 }
 
+.infoWrapperWhite {
+  background-color: #fff;
+  padding: 24px 16px;
+}
+
 .showAAnnouncementBox {
   top: 54px !important;
 }
