fixing feedback ui dealer page

--- a/styles/components/organisms/testimonyWidget.module.scss
+++ b/styles/components/organisms/testimonyWidget.module.scss
@@ -102,7 +102,7 @@
     font-size: 20px;
     line-height: 28px;
     color: #{$primary-dark-blue};
-    padding-left: 16px;
+    padding: 0px 16px;
   }
 
   .wrapper {
