--- a/styles/components/organisms/bannerDealerLP.module.scss
+++ b/styles/components/organisms/bannerDealerLP.module.scss
@@ -3,6 +3,7 @@
 @import '../../abstract/variable';
 
 .container {
+  position: relative;
   overflow-x: hidden;
   width: 100%;
 }
@@ -15,9 +16,13 @@
 }
 
 .supergraphicBg {
+  position: absolute;
   z-index: 1;
   height: 140px;
-  width: auto;
+  width: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
 
 .mainContent {
